# Iris

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
resources/: app.manifest  iris.rc  resources.qrc
scripts/: build-manual.cmd  build.cmd  run-in-vcvars.cmd
src/: main.cpp
src/core/: Config.cpp  Config.h  HistoryStore.cpp  HistoryStore.h  HotkeySpec.cpp  HotkeySpec.h  Logger.cpp  Logger.h  PinyinUtil.cpp  PinyinUtil.h  QtStdextShim.h  StringUtil.cpp  StringUtil.h  ThreadPool.cpp  ThreadPool.h  WinUtil.cpp  WinUtil.h
src/engine/: Matcher.cpp  Matcher.h  QueryParser.cpp  QueryParser.h  Ranker.cpp  Ranker.h  SearchEngine.cpp  SearchEngine.h
src/provider/: AppProvider.cpp  AppProvider.h  BookmarkProvider.cpp  BookmarkProvider.h  FileProvider.cpp  FileProvider.h  IProvider.h  ISearchableProvider.h  IndexStore.h
src/ui/: ContextMenu.cpp  ContextMenu.h  HotkeyManager.cpp  HotkeyManager.h  ResultList.cpp  ResultList.h  SearchBar.cpp  SearchBar.h  SearchWindow.cpp  SearchWindow.h  Theme.cpp  Theme.h  TrayIcon.cpp  TrayIcon.h
test/: CMakeLists.txt  mock_provider.h  test_app_provider.cpp  test_bookmark_provider.cpp  test_config.cpp  test_data_model.cpp  test_file_provider.cpp  test_hotkey.cpp  test_matcher.cpp  test_query_parser.cpp  test_ranker.cpp  test_search_engine.cpp
